codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_active_flags.snap
---
source: tui/src/resume_picker.rs
expression: snapshot
---
  Created at      Updated at     Branch            CWD          Conversation
> 20 minutes ago  1 minute ago   feature/resident  srv/project  [assistant] [changed] [approval] Remote act...
  2 hours ago     8 minutes ago  feature/resident  srv/project  [shell] Tail background command logs
