codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_closed_resident_thread.snap
---
source: tui/src/resume_picker.rs
expression: snapshot
---
  Created at     Updated at     Branch            CWD          Conversation
> 0 seconds ago  0 seconds ago  feature/resident  srv/project  [closed] [assistant] Closed resident thread
