codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_resident_non_interactive_toggle_hint.snap
---
source: tui/src/resume_picker.rs
assertion_line: 2472
expression: rendered
---
enter to reconnect     esc to start new     ctrl + c to quit     tab to toggle sort     i to toggle session kinds     ↑/↓ to browse
