codex-rs/tui/src/snapshots/codex_tui__resume_picker__tests__resume_picker_resident_reconnect_hint.snap
---
source: tui/src/resume_picker.rs
expression: snapshot
---
enter to reconnect     esc to start new     ctrl + c to quit     tab to toggle sort     ↑/↓ to browse
